chore: add prettier

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-    </head>
-    <body>
-        <canvas id='root'></canvas>
-        <script src='./index.ts'></script>
-    </body>
+  <head> </head>
+  <body>
+    <canvas id="root"></canvas>
+    <script src="./index.ts"></script>
+  </body>
 </html>
